--- a/Pages/Facturacion.html
+++ b/Pages/Facturacion.html
@@ -196,7 +196,7 @@
                         </div>
                         <div class="form-check">
                             <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
-                            <label class="form-check-label" for="paypal">Transferencia/Deposito Bancaria</label>
+                            <label class="form-check-label" for="paypal">Transferencia/Deposito Bancario</label>
                         </div>
                     </div>
 
