--- a/Pages/Testimonios.html
+++ b/Pages/Testimonios.html
@@ -88,14 +88,14 @@
         <section class="SeccionInf">
             <h2 id="TituloGral">GALERIA DE CLIENTES</h2>
             <section id="GaleriaImagenes">
-                <img src="../Images/an1.jpg" alt="Foto uno de la galeria">
-                <img src="../Images/an2.jpg" alt="Foto dos de la galeria">
-                <img src="../Images/an3.jpg" alt="Foto tres de la galeria">
-                <img src="../Images/ancuatro.jpg" alt="Foto cuatro de la galeria">
-                <img src="../Images/an5.jpg" alt="Foto cinco de la galeria">
-                <img src="../Images/an6.jpg" alt="Foto seis de la galeria">
-                <img src="../Images/an7.jpg" alt="Foto siete de la galeria">
-                <img src="../Images/an8.jpg" alt="Foto ocho de la galeria">
+                <a href=""><img src="../Images/an1.jpg" alt="Foto uno de la galeria"></a>
+                <a href=""><img src="../Images/an2.jpg" alt="Foto dos de la galeria"></a>
+                <a href=""><img src="../Images/an3.jpg" alt="Foto tres de la galeria"></a>
+                <a href=""><img src="../Images/ancuatro.jpg" alt="Foto cuatro de la galeria"></a>
+                <a href=""><img src="../Images/an5.jpg" alt="Foto cinco de la galeria"></a>
+                <a href=""><img src="../Images/an6.jpg" alt="Foto seis de la galeria"></a>
+                <a href=""><img src="../Images/an7.jpg" alt="Foto siete de la galeria"></a>
+                <a href=""><img src="../Images/an8.jpg" alt="Foto ocho de la galeria"></a>
             </section>
         </section>
     </main>
