--- a/Pages/Tienda.html
+++ b/Pages/Tienda.html
@@ -48,8 +48,6 @@
                 <a href="../Pages/Testimonios.html" id="Btn">NUESTROS PRODUCTOS</a>
                 <a href="../Pages/Contacto.html" id="Btn">PRODUCTOS A MEDIDA</a>
             </div>
-
-
         </section>
 
         <section class="SeccionSup">
@@ -103,7 +101,8 @@
 
         </section>
 
-        <button id="BtnCompras" class="w-100 btn btn-danger btn-lg" type="submit"><a href="../Pages/Facturacion.html">FINALIZAR COMPRA</a></button>
+        <button id="BtnCompras" class="w-100 btn btn-danger btn-lg" type="submit"><a
+                href="../Pages/FormCompra.html">FINALIZAR COMPRA</a></button>
 
         <section class="SeccionInf">
 
