--- a/Pages/FormCompra.html
+++ b/Pages/FormCompra.html
@@ -28,10 +28,10 @@
             <nav class="NavSup">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="../Pages/Nosotros.html">Conocenos</a></li>
+                    <li><a href="../Pages/Nosotros.html">Nosotros</a></li>
                     <li><a href="../Pages/Testimonios.html">Testimonios</a></li>
                     <li><a href="../Pages/Tienda.html">Tienda</a></li>
-                    <li><a href="../Pages/Contacto.html">Contactanos</a></li>
+                    <li><a href="../Pages/Contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -271,10 +271,10 @@
         <nav id="NavInf">
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="../Pages/Nosotros.html">Conocenos</a></li>
+                <li><a href="../Pages/Nosotros.html">Nosotros</a></li>
                 <li><a href="../Pages/Testimonios.html">Testimonios</a></li>
-                <li><a href="../Pages/Contacto.html">Contactanos</a></li>
                 <li><a href="../Pages/Tienda.html">Tienda</a></li>
+                <li><a href="../Pages/Contacto.html">Contacto</a></li>
             </ul>
         </nav>
 
