--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Creamos la protesis que tu mascota necesita">
+    <meta>
+    <meta name="og:image" content="https://ezedjm.github.io/JuanitoCoder/Images/juanifavicon1bis.png">
+    <meta name="twitter:image" content="https://ezedjm.github.io/JuanitoCoder/Images/juanifavicon1bis.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/stylesheet.css">
@@ -28,10 +32,10 @@
             <nav class="NavSup">
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./Pages/Nosotros.html">Conocenos</a></li>
+                    <li><a href="./Pages/Nosotros.html">Nosotros</a></li>
                     <li><a href="./Pages/Testimonios.html">Testimonios</a></li>
                     <li><a href="./Pages/Tienda.html">Tienda</a></li>
-                    <li><a href="./Pages/Contacto.html">Contactanos</a></li>
+                    <li><a href="./Pages/Contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -108,10 +112,11 @@
         <nav id="NavInf">
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./Pages/Nosotros.html">Conocenos</a></li>
+                <li><a href="./Pages/Nosotros.html">Nosotros</a></li>
                 <li><a href="./Pages/Testimonios.html">Testimonios</a></li>
-                <li><a href="./Pages/Contacto.html">Contactanos</a></li>
                 <li><a href="./Pages/Tienda.html">Tienda</a></li>
+                <li><a href="./Pages/Contacto.html">Contacto</a></li>
+                
             </ul>
         </nav>
 
