tercera entrega - SEO y SASS

--- a/Pages/Testimonios.html
+++ b/Pages/Testimonios.html
@@ -49,7 +49,7 @@
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
-                <p id="LeyendaVideos">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <p id="LeyendaVideos">Texto explicativo del video.</p>
             </div>
 
             <div>
@@ -57,7 +57,7 @@
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
-                <p id="LeyendaVideos">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p id="LeyendaVideos">Texto explicativo del video.</p>
             </div>
 
             <div>
@@ -65,7 +65,7 @@
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
-                <p id="LeyendaVideos">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p id="LeyendaVideos">Texto explicativo del video.</p>
             </div>
 
             <div>
@@ -73,7 +73,7 @@
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
-                <p id="LeyendaVideos">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p id="LeyendaVideos">Texto explicativo del video.</p>
             </div>
 
             <div>
@@ -81,7 +81,7 @@
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
-                <p id="LeyendaVideos">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p id="LeyendaVideos">Texto explicativo del video.Texto explicativo del video.Texto explicativo del video.Texto explicativo del video.</p>
             </div>
         </section>
 
