--- a/Pages/Tienda.html
+++ b/Pages/Tienda.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
     <link rel="icon" href="../Images/juanifavicon1.jpeg">
-    <title>Tienda de Juanito</title>
+    <title>Juanito - Tienda de Juanito</title>
 </head>
 
 <body id="BodyTienda">
@@ -114,8 +114,8 @@
                     </p>
                 </div>
                 <div>
-                    <a href="https://play.google.com/store/games?hl=es_AR" id="Btn">GOOGLE PLAY</a>
-                    <a href="https://www.apple.com/la/app-store/" id="Btn">APP STORE</a>
+                    <a href="https://play.google.com/store/games?hl=es_AR" id="BtnStores">GOOGLE PLAY</a>
+                    <a href="https://www.apple.com/la/app-store/" id="BtnStores">APP STORE</a>
                 </div>
             </div>
         </section>
