--- a/Pages/Nosotros.html
+++ b/Pages/Nosotros.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Creamos la protesis que tu mascota necesita! Sillas de ruedas, apoyos miembros delanteros y traseros y mucho mas!">
+    <meta name="keywords" content="ortopedia, mascotas, perro, perros, gato, gatos, silla de ruedas, sillas de ruedas para mascotas, protesis mascotas, protesis perro, protesis gato, pet shop">
+    <meta name="og:image" content="https://ezedjm.github.io/JuanitoCoder/Images/juanifavicon1bis.png">
+    <meta name="twitter:image" content="https://ezedjm.github.io/JuanitoCoder/Images/juanifavicon1bis.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/stylesheet.css">
@@ -84,7 +88,7 @@
                 <div>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1952.6807022880992!2d-58.381773119830534!3d-34.604050110696754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses!2sar!4v1675914961723!5m2!1ses!2sar"
-                        width="380" height="304" style="" allowfullscreen="" loading="lazy"
+                        width="380" height="304" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
