--- a/Pages/Tienda.html
+++ b/Pages/Tienda.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Creamos la protesis que tu mascota necesita! Sillas de ruedas, apoyos miembros delanteros y traseros y mucho mas!">
+    <meta name="keywords" content="ortopedia, mascotas, perro, perros, gato, gatos, silla de ruedas, sillas de ruedas para mascotas, protesis mascotas, protesis perro, protesis gato, pet shop">
+    <meta name="og:image" content="https://ezedjm.github.io/JuanitoCoder/Images/juanifavicon1bis.png">
+    <meta name="twitter:image" content="https://ezedjm.github.io/JuanitoCoder/Images/juanifavicon1bis.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/stylesheet.css">
