--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
     <link rel="icon" href="../Images/juanifavicon1.jpeg">
     <title>Juanito - Contactanos</title>
 </head>
@@ -57,6 +58,7 @@
             <div id="BoxBtnEnviar">
                 <a href="" id="Btn">ENVIAR</a>
             </div>
+
         </section>
 
         <section class="SeccionInf">
@@ -105,7 +107,7 @@
     </footer>
 
 
-
+    <script src="../contacto.js"></script>
 </body>
 
 </html>
